overflow issue fix

--- a/src/components/PortfolioComponent/PortfolioComponent.module.scss
+++ b/src/components/PortfolioComponent/PortfolioComponent.module.scss
@@ -104,6 +104,7 @@
     width: 100%;
     padding: 1rem;
     transform: scale(0.9);
+    overflow: hidden;
     transition: all 1s ease-in-out;
   }
   .portfolio-image-card:hover img {
@@ -237,6 +238,7 @@
     width: 100%;
     padding: 1.2rem;
     transform: scale(0.9);
+    overflow: hidden;
     transition: all 2s ease-in-out;
   }
   .portfolio-image-card:hover img {
@@ -370,6 +372,7 @@
     width: 100%;
     padding: 1.5rem;
     transform: scale(0.9);
+    overflow: hidden;
     transition: all 2s ease-in-out;
   }
   .portfolio-image-card:hover img {
